Decouples database and stats logic
